# CVPR2026BrightChanllenge

./: .gitignore  PROJECT_CONTEXT.md  README.md  agent.md  crop_by_sar.py  merge_geotiff.py  requirements.txt  tutorial.md
bda_benchmark/: README_DFC25.md  README_cross_event.md
bda_benchmark/dataset/: imutils.py  make_data_loader.py
bda_benchmark/model/: DamageFormer.py  DeepLabV3Plus.py  SiamAttnUNet.py  UNet.py
bda_benchmark/util_func/: metrics.py
cvprw26/: auto_optimize.py  check_xpu.py  download_data.py  infer.sh  manage_cri.py  prepare_annotations.py  run_confirm.py  test.sh  train.sh
cvprw26/config/: disaster.yaml  exp002_xpu_smoke.yaml  exp002_xpu_smoke_retry.yaml  exp003_nan_probe.yaml  exp_quick_damage_aware_xpu.yaml  exp_quick_random_xpu.yaml  exp_smoke_xpu.yaml
cvprw26/experiment_sync/: README.md  alert_state.json  (+9 more)
cvprw26/experiment_sync/runs/exp001_run1/repo_snapshot/: README.md  pyproject.toml
cvprw26/experiment_sync/runs/exp001_run1/repo_snapshot/config/: disaster.server.yaml  exp003_baseline_xpu_evalcpu.yaml  exp004_filtered_lr1e3.yaml  exp_smoke_cpu.yaml  exp_smoke_xpu.yaml
cvprw26/experiment_sync/runs/exp001_run1/repo_snapshot/scripts/: setup_ubuntu22_cuda.sh
cvprw26/experiment_sync/runs/exp001_run1/repo_snapshot/src/: annotation_stats.py  engine.py  eval.py  infer_utils.py
cvprw26/experiment_sync/runs/exp001_run1/repo_snapshot/src/dataset/: classes.py  data.py
cvprw26/experiment_sync/runs/exp001_run1/repo_snapshot/src/model/: mask_rcnn.py
dfc25_legacy/: description.txt
umcd_benchmark/: README.md
umim_benchmark/: README.md
(+81 files in other folders)
